--- a/dashboard.css
+++ b/dashboard.css
@@ -1,76 +1,98 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(10deg, #611010, #81c784);
-    color: #333;
+    background: linear-gradient(10deg, #611010, #011102); 
+    color: #fff; /* Texte plus clair pour plus de lisibilité */
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
 
-.container, .dashboard-container {
-    width: 90%;
-    max-width: 800px;
-    padding: 20px;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid #142415;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-}
-
 .header h1 {
-    font-size: 1.8em;
-    color: #4caf50;
+    color: #ffffff;
+    font-size: 2.4em;
+}
+
+h3 {
+    color: #45a049;
+    background-color: black;
 }
 
 .logout-btn {
-    padding: 10px 15px;
+    padding: 12px 20px;
     background-color: #e57373;
     border: none;
     border-radius: 5px;
-    color: #fff;
+    color: white;
+    font-size: 18px;
     cursor: pointer;
+    margin-top: 10px;
+    transition: all 0.3s ease;
 }
 
 .logout-btn:hover {
     background-color: #d32f2f;
+    transform: scale(1.1);
 }
 
-.main-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+.category h2 {
+    font-size: 1.6em;
+    color: #e0f7fa;
 }
 
-.card, .admin-section {
-    flex: 1 1 calc(33.333% - 20px);
-    background: #f9f9f9;
+.toggle-btn {
+    padding: 7px 14px;
+    background-color: #4caf50;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.toggle-btn:hover {
+    background-color: #45a049;
+    transform: scale(1.1);
+}
+
+.card {
+    background: linear-gradient(to bottom, #fff, #f1f1f1);
     padding: 15px;
     border-radius: 8px;
-    text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card h2 {
-    color: #4caf50;
-    margin-bottom: 10px;
+.card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px);
 }
 
-.admin-section {
-    flex: 1 1 100%;
-    background-color: #fff9c4;
-    border: 1px solid #fdd835;
+.card iframe {
+    width: 100%;
+    border-radius: 8px;
 }
 
-.admin-section h2 {
-    color: #fbc02d;
+.movies {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .header h1 {
+        font-size: 2em;
+    }
+
+    .category h2 {
+        font-size: 1.2em;
+    }
+
+    .card {
+        padding: 10px;
+    }
+
+    .movies iframe {
+        height: 150px;
+    }
 }
