--- a/dashboard.css
+++ b/dashboard.css
@@ -1,22 +1,54 @@
+/* Styles généraux */
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(10deg, #611010, #011102); 
-    background-size: cover;  /* Assure que le fond couvre tout l'écran */
-    color: #fff; /* Texte plus clair pour plus de lisibilité */
+    background: linear-gradient(10deg, #611010, #011102);
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
 
-.header h1 {
+/* Bannière Adblock */
+#adblock-banner {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #ff5722;
     color: #ffffff;
-    font-size: 2.4em;
+    text-align: center;
+    padding: 15px;
+    z-index: 9999;
+    font-size: 16px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-h3 {
-    color: black;
+#adblock-banner a {
+    color: #ffcc00;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+#adblock-banner a:hover {
+    text-decoration: none;
+}
+
+#adblock-banner button {
+    background-color: transparent;
+    border: none;
+    color: #ffffff;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+/* Entête */
+.header h1 {
+    font-size: 2.4em;
+    color: #ffffff;
 }
 
 .logout-btn {
@@ -36,6 +68,7 @@ h3 {
     transform: scale(1.1);
 }
 
+/* Catégories */
 .category h2 {
     font-size: 1.6em;
     color: #e0f7fa;
@@ -56,6 +89,7 @@ h3 {
     transform: scale(1.1);
 }
 
+/* Cartes */
 .card {
     background: linear-gradient(to bottom, #fff, #f1f1f1);
     padding: 15px;
