--- a/dashboard.css
+++ b/dashboard.css
@@ -5,8 +5,7 @@ body {
     background: linear-gradient(10deg, #611010, #011102);
     color: #fff;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     min-height: 100vh;
 }
 
@@ -20,7 +19,7 @@ body {
     text-align: center;
     padding: 15px;
     z-index: 9999;
-    font-size: 16px;
+    font-size: 14px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: space-between;
@@ -47,86 +46,58 @@ body {
 
 /* Entête */
 .header h1 {
-    font-size: 2.4em;
+    font-size: 1.8em;
     color: #ffffff;
+    margin-bottom: 15px;
+    text-align: center;
+    padding: 10px;
 }
 
-.logout-btn {
-    padding: 12px 20px;
+/* Boutons */
+.logout-btn, .toggle-btn {
     background-color: #e57373;
-    border: none;
-    border-radius: 5px;
     color: white;
-    font-size: 18px;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 1em;
     cursor: pointer;
-    margin-top: 10px;
-    transition: all 0.3s ease;
 }
 
-.logout-btn:hover {
+.logout-btn:hover, .toggle-btn:hover {
     background-color: #d32f2f;
-    transform: scale(1.1);
-}
-
-/* Catégories */
-.category h2 {
-    font-size: 1.6em;
-    color: #e0f7fa;
-}
-
-.toggle-btn {
-    padding: 7px 14px;
-    background-color: #4caf50;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.toggle-btn:hover {
-    background-color: #45a049;
-    transform: scale(1.1);
 }
 
 /* Cartes */
 .card {
-    background: linear-gradient(to bottom, #fff, #f1f1f1);
+    background: #ffffff;
+    color: #000000;
+    margin: 10px auto;
     padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.card:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transform: translateY(-5px);
+    border-radius: 5px;
+    max-width: 95%;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .card iframe {
     width: 100%;
-    border-radius: 8px;
+    height: 200px;
+    border: none;
+    border-radius: 5px;
 }
 
-.movies {
-    display: none;
-}
-
+/* Mobile Responsive */
 @media (max-width: 768px) {
     .header h1 {
-        font-size: 2em;
+        font-size: 1.5em;
     }
 
-    .category h2 {
-        font-size: 1.2em;
+    .card iframe {
+        height: 180px;
     }
 
-    .card {
-        padding: 10px;
-    }
-
-    .movies iframe {
-        height: 150px;
+    #adblock-banner {
+        font-size: 12px;
     }
 }
