--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
+    background-color: #f4f4f9;
 }
 
 header {
@@ -53,6 +53,7 @@ header h1 {
     display: flex;
     justify-content: center;
     gap: 10px;
+    position: relative;
 }
 
 #search-bar {
@@ -60,26 +61,24 @@ header h1 {
     font-size: 16px;
     width: 250px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
 }
 
 #suggestions-list {
-    list-style-type: none;
+    margin-top: 10px;
     padding: 0;
-    margin: 0;
-    max-height: 200px;
-    overflow-y: auto;
-    position: absolute;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    list-style-type: none;
     width: 250px;
+    border: 1px solid #ddd;
     border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    position: absolute;
+    top: 40px;  /* Make sure the suggestions appear just below the search bar */
     z-index: 10;
 }
 
 #suggestions-list li {
-    padding: 10px;
+    padding: 8px;
     cursor: pointer;
 }
 
@@ -88,24 +87,35 @@ header h1 {
 }
 
 .movies {
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
     justify-content: center;
-    margin-top: 20px;
+    gap: 20px;
 }
 
 .card {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    width: 200px;
+    width: 300px;
+    background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
 .card iframe {
-    width: 100%;
-    height: 150px;
-    border-radius: 8px;
+    border: none;
+}
+
+.card h3 {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    margin: 0;
+    font-size: 18px;
+    border-bottom: 1px solid #ddd;
+}
+
+.card:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
