--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
-    font-family: 'Arial', sans-serif;
     margin: 0;
-    padding: 0;
+    font-family: 'Arial', sans-serif;
+    background: linear-gradient(10deg, #611010, #011102);
+    color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
     min-height: 100vh;
-    background-color: #f4f4f9;
 }
 
 header {
